[package]
name = "bimc"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
getopts = "0.2"
native-tls = { version = "0.2", features = ["vendored"] }

log = "0.4"
env_logger = "0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
