[package]
name = "bimc"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2"
getopts = "0.2"
webpki-roots = "0.22"
rustls = "0.20"

log = "0.4"
env_logger = "0.9"

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
