[package]
name = "bim-core"
version = "0.15.0"
edition = "2021"
description = "Client core for bench.im."
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bim"
path = "src/server.rs"

[[bin]]
name = "bimc"
path = "src/client.rs"

[dependencies]
url = "2"
getopts = "0.2"
webpki-roots = "0.22"
rustls = "0.20"
tiny_http = "0.11"

log = "0.4"
env_logger = "0.9"

[profile.release]
opt-level = 'z'
strip = true
lto = true
codegen-units = 1
panic = "abort"
